[gd_scene load_steps=7 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://script/scene object/StartButton.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Russell Square Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Russell Square Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
font_data = SubResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1023.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1023.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "Pressing Competition 2
~ Touhou Edition ~"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 1023.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 4 )
text = "Version 1.11"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 163.0
margin_right = 1023.0
margin_bottom = 563.0
rect_min_size = Vector2( 1000, 400 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 567.0
margin_right = 1023.0
margin_bottom = 596.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game Now!"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="Button" parent="."]
margin_left = 3.1748
margin_top = 1.5874
margin_right = 174.175
margin_bottom = 38.5874
rect_pivot_offset = Vector2( 179.675, 42.5891 )
custom_fonts/font = ExtResource( 1 )
text = "Credit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC2" type="Button" parent="."]
margin_left = 3.1748
margin_top = 38.5874
margin_right = 174.173
margin_bottom = 75.5874
rect_pivot_offset = Vector2( 178.087, 4.49147 )
custom_fonts/font = ExtResource( 1 )
text = "How to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC3" type="Button" parent="."]
margin_left = 3.1748
margin_top = 75.5874
margin_right = 174.173
margin_bottom = 112.587
rect_pivot_offset = Vector2( 178.087, 4.49147 )
custom_fonts/font = ExtResource( 1 )
text = "Game Setting"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Button" method="on_Start"]
[connection signal="pressed" from="CC" to="VBoxContainer/Button" method="on_Credit"]
[connection signal="pressed" from="CC2" to="VBoxContainer/Button" method="_on_CC2_pressed"]
[connection signal="pressed" from="CC3" to="VBoxContainer/Button" method="_on_CC3_pressed"]
